assets/css/styles.css
* {
	padding: 0;
	margin: 0;
	font-family: 'Josefin Sans', sans-serif;
	box-sizing: border-box;
}

:root{
	--red: #f9004d;
	--light-pink: #fcfc;
	--dark-black: #191919;
	--light-black: #1e1e1e;
	--light-grey: #858585;
}

@keyframes shake {
	10%, 90% {
		transform: translate3d(-1px, 0, 0);
	}
	20%, 80% {
		transform: translate3d(2px, 0, 0);
	}
	30%, 50%, 70% {
	  transform: translate3d(-4px, 0, 0);
	}
	40%, 60% {
	  transform: translate3d(4px, 0, 0);
	}
  }
  
@keyframes tilt-shaking {
	0% { transform: rotate(0deg); }
	25% { transform: rotate(5deg); }
	50% { transform: rotate(0eg); }
	75% { transform: rotate(-5deg); }
	100% { transform: rotate(0deg); }
}

body{
	background-color: var(--dark-black);
	width: 100vw;
	height: 100vh;
	margin: 0px;
	padding: 0px;
}

.hero {
	background-color: var(--dark-black);
	height: 100vh;
	width: 100%;
	background-size: cover;
	background-position: center;
}

nav {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding-top: 45px;
	padding-left: 8%;
	padding-right: 8%;
}

.logo {
	color: white;
	font-size: 35px;
	letter-spacing: 1px;
	cursor: pointer;
	position: relative;
}

.logo:hover{
	animation: tilt-shaking .5s infinite;
}

span {
	color: var(--red);
}

nav ul li {
	list-style-type: none;
	display: inline-block;
	padding: 10px 25px;
	transition: transform .4s;

}

nav ul li:hover{
	transform: scale(1.2);
}

nav ul li a{
	color: white;
	text-decoration: none;
	padding-top: 50px;
	font-weight: bold;
	font-size: 20px;
	text-transform: capitalize;


	background:
 	bottom var(--p1, 10px) left 50% /100% var(--p, 2px) no-repeat,
    linear-gradient(currentColor 0 0) bottom -2px right 50%/var(--d, 0%) 3px no-repeat;
  	transition: 0.5s;

}

nav ul li a:hover{
	color: var(--red);
	--d: 100%;
	--p: 3px;
	--p1: 4px;
}

.btn{
	background-color: var(--red);
	border-radius: 30px;
	color: white;
	text-decoration: none;
	border: 2px solid transparent;
	font-weight: bold;
	padding: 10px 25px;
	transition: transform .7s;
}

.btn:hover{
	box-shadow: 0px 0px 5px black, 0px 0px 15px var(--light-grey);
	transform: scale(1.2);
}

/* content: below hero section and included by hero div */
.content{
	position: absolute;
	top: 50%;
	left: 8%;
	transform: translateY(-50%);
}

/* h1: The big words Phan Tai Duc */
h1{
	color: white;
	margin: 20px 0px 20px;
	font-size: 75px;
}

/* h3: Short description "I'm a student" */
h3{
	color: white;
	margin-bottom: 50px;
	font-size: 25px;
}

/* h4: greeting "Hello, I am" */
h4{
	color: var(--light-pink);
	letter-spacing: 2px;
	font-size: 25px;
}

/* Short contact form */
.newslatter form{
	width: 380px;
	max-width: 100%;
	position: relative;
	transition: transform .4s;
}

.newslatter form:hover{
	transform: scale(1.07);
}

input[name='email'] {
	display: inline-block;
	width: 100%;
	padding: 14px 130px 14px 15px;
	border: 2px solid var(--red);
	border-radius: 30px;
	outline: none;
}

input[name="email"]:hover{
	box-shadow: 0px 0px 5px black, 0px 0px 15px var(--light-grey);
}

input[name='submit']{
	display: inline;
	position: absolute;
	outline: none;
	border: none;
	padding: 10px 30px;
	border-radius: 30px;
	cursor: pointer;
	background-color: var(--red);
	color: white;
	top: 6px;
	right: 6px;
	box-shadow: 0px 0px 5px black, 0px 0px 15px var(--light-grey);
}

input[name="submit"]:hover {
	animation: shake 1s cubic-bezier(.36,.07,.19,.97) both;
	transform: translate3d(0, 0, 0);
	perspective: 1000px;
}

/* About section */
.about{
	width: 100%;
	height: 100vh;
	padding: 150px 0px;
	background-color: var(--light-black);
}

/* div Main in About section */
.main{
	width: 1130px;
	margin: 0px auto;
	max-width: 95%;
	display: flex;
	align-items: center;
	justify-content: space-around;
}

/* gigachad */
.about img{
	height: auto;
	width: auto;
}

.about-text{
	width: 40vw;
	margin-left: 100px;
}

/* The big words About Me */
.about-text h2{
	color: white;
	font-size: 75px;
	text-transform: capitalize;
	margin-bottom: 20px;
}

/* About Me - Description */
.about-text h5{
	color: white;
	letter-spacing: 2px;
	font-size: 22px;
	margin-bottom: 25px;
	text-transform: capitalize;
}

/* Button Let's talk */
.about-text button{
	color: white;
	background-color: var(--red);
	text-decoration: none;
	border: 2px solid transparent;
	font-weight: bold;
	border-radius: 30px;
	padding: 13px 30px;
	transition: .4s;
	cursor: pointer;
}

.about-text button:hover{
	background-color: transparent;
	border: 4px solid var(--red);
}


/* Mobile phone: Width < 740px */
@media only screen and (max-width: 46.1875em){

	/* Hero Section */
	.hero{
		height: 100vh;
		width: 100vw;
	}

	/* Disable menu */
	nav ul{
		display: none;
	}

	/* Subcribe button */
	.btn{
		background-color: var(--red);
		border-radius: 30px;
		color: white;
		text-decoration: none;
		border: 2px solid transparent;
		font-weight: bold;
		padding: 8px 15px;
		font-size: 14px;
		transition: transform .4s;
		box-shadow: 0px 0px 5px black, 0px 0px 15px var(--light-grey);
	}

	.btn:active{
		transform: scale(1.2);
	}

	/* nav content */
	.content{
		position: relative;
		top: 40%;
		left: 8%;
	}

	/* h1: The big words Phan Tai Duc */
	h1{
		color: white;
		margin: 20px 0px;
		font-size: 50px;
		letter-spacing: 2px;
	}

	/* Put span "Tai Duc" down a new line */
	.content h1 span{
		font-size: 60px;
		margin-top: 20px ;
		margin-left: 0px;
		display: block;
	}

	/* h3: Short description "I'm a student" */
	h3{
		color: white;
		margin-bottom: 50px;
		font-size: 20px;
	}

	/* h4: greeting "Hello, I am" */
	h4{
		color: var(--light-pink);
		letter-spacing: 1.5px;
		font-size: 15px;
	}

	/* Short contact form */
	.newslatter form{
		width: 85%;
		max-width: 90%;
		position: relative;
		transition: transform .4s;
	}

	.newslatter form:hover{
		transform: scale(1.07);
	}
		
	input[name='email'] {
		display: inline-block;
		width: 100%;
		padding: 14px 130px 14px 15px;
		/* margin-bottom: 100px; */
		border: 2px solid var(--red);
		border-radius: 30px;
		outline: none;
	}

	input[name="email"]:hover{
		box-shadow: 0px 0px 5px black, 0px 0px 15px var(--light-grey);
	}

	input[name='submit']{
		display: inline;
		position: absolute;
		outline: none;
		border: none;
		padding: 10px 30px;
		border-radius: 30px;
		cursor: pointer;
		background-color: var(--red);
		color: white;
		top: 6px;
		right: 6px;
		box-shadow: 0px 0px 5px black, 0px 0px 15px var(--light-grey);
	}
	
	input[name="submit"]:hover {
		animation: shake 1s cubic-bezier(.36,.07,.19,.97) both;
		transform: translate3d(0, 0, 0);
		perspective: 1000px;
	}

	/* about section */
	.about{
		background-color: var(--dark-black);
		height: 100vh;
		padding-top: 100px;
	}

	/* gigachad */
	.about img{
		position: relative;
		display: block;
		height: 200px;
		width: 200px;
		margin-left: auto;
		margin-right: auto;
	}

	.about-text{
		width: 80vw;
		margin: 5px;
		margin-top: 30px;
	}
	
	/* div Main in About section */
	.main{
		width: 100%;
		align-items: center;
		display: block;
		padding:0px 30px;
		max-width: 100%;
	}

	/* The big words About Me */
	.about-text h2{
		color: white;
		font-size: 30px;
		text-align: center;
		text-transform: capitalize;
		margin-bottom: 20px;
	}
	
	/* About Me - Description */
	.about-text h5{
		text-align: center;
		color: white;
		letter-spacing: 2px;
		font-size: 22px;
		margin-bottom: 25px;
		text-transform: capitalize;
	}

	/* Button Let's talk */
	.about-text button{
		position: relative;
		display: flex;
		justify-content: center;
		color: white;
		background-color: var(--red);
		text-decoration: none;
		border: 2px solid transparent;
		font-weight: bold;
		border-radius: 30px;
		padding: 13px 30px;
		margin-left: auto;
		margin-right: auto;
		transition: .4s;
	}

	.about-text button:hover{
		background-color: transparent;
		border: 4px solid var(--red);
	}
}

